force-app/main/default/objects/CCR_CarePlusConfiguration__c/CCR_CarePlusConfiguration__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Custom Setting to store Care+ configuration per market</description>
    <label>CCR Care+ Configuration</label>
</CustomObject>