force-app/main/default/objects/CCR_CarePlusConfiguration__c/fields/CCR_AccidentalDamageLimit__c.field-meta.xml
<CustomField>
    <fullName>CCR_AccidentalDamageLimit__c</fullName>
    <description>Field to store information how many times device has been replaced due to Accidental Damage.</description>
    <label>Accidental Damage Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>