force-app/main/default/objects/CCR_CarePlusConfiguration__c/fields/CCR_CarePlusActivated__c.field-meta.xml
<CustomField>
    <fullName>CCR_CarePlusActivated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to store information if Care+ program is active for country.</description>
    <label>Care+ Activated</label>
    <type>Checkbox</type>
</CustomField>