force-app/main/default/objects/CCR_CarePlusConfiguration__c/fields/CCR_Country__c.field-meta.xml
<CustomField>
    <fullName>CCR_Country__c</fullName>
    <description>Field to store information about country</description>
    <label>Country</label>
    <length>254</length>
    <required>true</required>
    <type>Text</type>
</CustomField>