force-app/main/default/objects/CCR_CarePlusConfiguration__c/fields/CCR_L0codes__c.field-meta.xml
<CustomField>
    <fullName>CCR_L0codes__c</fullName>
    <description>Field to store all issue codes which are covered by Care+ program</description>
    <label>L0 codes</label>
    <length>254</length>
    <required>true</required>
    <type>Text</type>
</CustomField>